Fixes pagination links displaying vertically. (#1069)
* Fixes pagination links displaying vertically.

* Fix footer layout covering up pagination on small screens

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -20,6 +20,7 @@ $font-size-sm: $font-size-base;
 body {
   font-family: Verdana, Arial, sans-serif;
   font-size: $font-size-base;
+  margin-bottom: 0;
 }
 
 #logo {
@@ -369,6 +370,7 @@ div.person {
 
 #unc-footer {
   background-color: $carolina-blue-dark !important;
+  position: relative;
 
   .navbar-text {
     display: flex;
@@ -600,6 +602,14 @@ input.hidden-file-input:focus + label {
   outline: #66afe9 auto 5px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+
+/* Fixes pagination links displaying vertically. */
+/* @TODO Possibly a 4.x bug. It doesn't seem to be an issue in Hyrax 5.x */
+.hyc-bl-pager {
+  .pagination {
+    display: flex;
+  }
 }
 
 table p.name span {
@@ -1016,10 +1026,6 @@ Hide it entirely until the issue is resolved upstreeam
     }
   }
 
-  .site-footer {
-    position: absolute;
-  }
-
   #unc-footer {
     ul li {
       display: block;
@@ -1082,7 +1088,6 @@ Hide it entirely until the issue is resolved upstreeam
     }
   }
 }
-
 
 /* Responsive Hyrax override */
 @media only screen and (min-width: 768px) {
